--- a/WebRole/static/web.config
+++ b/WebRole/static/web.config
@@ -2,8 +2,7 @@
 <configuration>
     <system.webServer>
         <handlers>
-            <remove name="Python-via-FastCGI" />
-            <remove name="Python-via-FastCGI" />
+            <remove name="Python_via_FastCGI" />
         </handlers>
     </system.webServer>
 </configuration>
