--- a/WebRole/Web.config
+++ b/WebRole/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <appSettings>
+    <add key="WSGI_HANDLER" value="project.wsgi.application" />
+  </appSettings>
   <system.diagnostics>
    <trace>
       <listeners>
